2014-09-15  Jorge Zapata <jzapata@fluendo.com>

	* Makefile.am:
	* configure.ac:
	* examples/Makefile.am:
	* ext:
	* ext/Makefile.am:
	* fludownloader.pc.in:
	* fludownloader_static.pc.in:
	* lib/Makefile.am:
	Make the project be recursive. This is needed to first build the local
	curl in case the lib needs it.
	Make sure to call the internal curl configuration before the config.stat
	is created, that gives us a margin to update the different vars.
	Update the pc files to list the internal libcurl dependencies when
	linked statically.
	Be able to create the static version of libfludownloader with libcurl
	linked statically too.

2014-09-12  Jorge Zapata  <jzapata@fluendo.com>

	* .:
	* Makefile.am:
	* configure.ac:
	* patches:
	* patches/fix-automake-1.13.patch:
	Initial approach to link with curl statically
	Add an external for the version of curl that supports pipelining

2014-03-31  Xavi Artigas  <xartigas@fluendo.com>

	* Makefile.am:
	* examples/curl_pipelining_test.c: (write_function),
	(header_function), (add_task), (process_messages), (main):
	Add native curl example (no fludownloader used) to check for
	behavior changes since libCurl 7.30 that are breaking fludownloader.

2013-11-08  Andoni Morales <amorales@fluendo.com>

	* configure.ac:
	* Makefile.am:
	Fix link error in Windows (error: -fPIC ingnored)

2013-10-25  Release Maker <nomail@fluendo.com>

	* configure.ac: Back to TRUNK.

=== release 0.10.6 ===

2013-10-25  Julien Moutte <julien@fluendo.com>

	* Makefile.am: Don't generate the .a for the shared library as we have
	the static one generated apart.

2013-10-25  Release Maker <nomail@fluendo.com>

	* configure.ac: Back to TRUNK.

=== release 0.10.5 ===

2013-10-25  Julien Moutte <julien@fluendo.com>

	* Makefile.am: Build two flavors of the library (static and dynamic)
	* configure.ac: Generate all pc files.
	* fludownloader_static.pc.in: Add a pkgconfig file for static linking.
	* libfludownloader.spec.in: Adapt spec file to build the static rpm