@@ -1,3 +1,9 @@
+2014-09-15  Jorge Zapata  <jzapata@fluendo.com>
+
+	* examples/Makefile.am:
+	The pipelining test should not be part of the fludownloader
+	examples. It does not use the fludownloader API at all
+
 2014-09-15  Jorge Zapata <jzapata@fluendo.com>
 
 	* Makefile.am:
